# inventory-tracking-system-web-app

./: .gitignore  README.md  pyproject.toml  requirements.txt  run.py
app/: database.py  models.py
app/crud/: inventory_crud.py
app/templates/: base.html  createform.html
app/views/: inventory_views.py
myapp/: __init__.py  database.py  inventory.db  models.py  test.db
myapp/crud/: inventory_crud.py  warehouse_crud.py
myapp/static/: myapp.css
myapp/templates/: base.html  create.html  edit.html  edit_inventory.html  edit_warehouse.html  index.html  new_inventory.html  new_warehouse.html  overview.html
myapp/views/: index.py  inventory.py  inventory_views.py  warehouse.py
tests/: base_test_case.py  test_index_views.py  test_inventory_crud.py  test_inventory_views.py  test_warehouse_crud.py  test_warehouse_views.py
