[tool.poetry]
name = "shopify"
version = "0.1.0"
description = ""
authors = ["Melanie Tai <mt337@cornell.edu>"]

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.1.3"
Flask = "^2.1.2"
Flask-SQLAlchemy = "^2.5.1"
greenlet = "^1.1.2"
importlib-metadata = "^4.11.3"
itsdangerous = "^2.1.2"
Jinja2 = "^3.1.2"
MarkupSafe = "^2.1.1"
psycopg2-binary = "^2.9.3"
SQLAlchemy = "^1.4.36"
Werkzeug = "^2.1.2"
zipp = "^3.8.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
